Adicionando novos arquivos do Eletronix

--- a/Códigos/Eletronix/.classpath
+++ b/Códigos/Eletronix/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/java/lib/jnativehook-1.1.5.jar"/>
 	<classpathentry kind="lib" path="C:/Users/BFTC/Desktop/Java Libs &amp; Configs/jnativehook-2.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/BFTC/Downloads/Arquivos/Dependências Projetos/Java/Java Libs &amp; Configs/JARs/jnativehook-1.1.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
